chapter-08/cluster-apk8s-dev5/003-data/095-presto/50-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: presto
  namespace: data
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: sysop-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
    - host: presto.data.dev5.apk8s.dev
      http:
        paths:
          - backend:
              serviceName: presto-data
              servicePort: 80
            path: /
  tls:
    - hosts:
        - presto.data.dev5.apk8s.dev
      secretName: presto-data-production-tls
